src/test/deca/syntax/invalid/LvalueInvalid.deca
// Description:
//    programme vide
//
// Resultats:
//
// Historique:
//    cree le 11/01/2023


{

	3 = 3;

}
